Test notebook rendering

--- a/climate_analysis_colab.ipynb
+++ b/climate_analysis_colab.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6282e670",
+   "id": "0fb8c2d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "852feb7f",
+   "id": "a784e332",
    "metadata": {},
    "source": [
     "1.Data exploration and Cleaning"
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d8ea3e8",
+   "id": "c14f2788",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1382fa7",
+   "id": "f45ab8e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4711fdd2",
+   "id": "e77fb44b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb58b1db",
+   "id": "d4201b4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be3d20f4",
+   "id": "e87beb5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d811050",
+   "id": "9d353dfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ed88639",
+   "id": "ab7eccfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4bd9253",
+   "id": "4f83ffc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92b027ee",
+   "id": "bd2e383a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67189373",
+   "id": "71244a6a",
    "metadata": {},
    "source": [
     "2.Data Visualization and EDA"
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51c4862e",
+   "id": "2c93e49a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fd678c7",
+   "id": "175c3aaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdcebcc8",
+   "id": "3c2ee940",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c1b9377",
+   "id": "10eb1034",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deafe1d2",
+   "id": "2194285a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f5229e8",
+   "id": "0e2752cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97c5c8f0",
+   "id": "9ca92331",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50ed8580",
+   "id": "cf9396c7",
    "metadata": {},
    "source": [
     "1.Hypothesis testing and ANOVA Perform"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80161470",
+   "id": "2ca5cf03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3118368c",
+   "id": "632f879b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f60939c7",
+   "id": "e5dab63b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dabe505c",
+   "id": "92ee7275",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a5b4b64",
+   "id": "4b042a0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae87bb0f",
+   "id": "2aa19afb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1c97e85",
+   "id": "89696f56",
    "metadata": {},
    "source": [
     "ANOVA TEST"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9caf555",
+   "id": "124b3205",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0067fc44",
+   "id": "99adb442",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9e44c31",
+   "id": "e20c0056",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2097df0",
+   "id": "14a673f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74779230",
+   "id": "e7e5dac0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93445e48",
+   "id": "0fb25466",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "523b6428",
+   "id": "c9179a29",
    "metadata": {},
    "source": [
     "Correlation Matrix"
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f92c9f9d",
+   "id": "d0c9a387",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1a526bf",
+   "id": "f063eb93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faf9f8ff",
+   "id": "be101fde",
    "metadata": {},
    "source": [
     "Simple linear regression and Multiple linear regression analysis"
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8feee83f",
+   "id": "1f38870c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ba48061",
+   "id": "013c8c60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76ecb8f9",
+   "id": "edee084d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f98fd322",
+   "id": "2a851078",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26b309dc",
+   "id": "42cbd328",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80f983f3",
+   "id": "561c9444",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28f334e0",
+   "id": "d12d7c74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d595de3d",
+   "id": "48ec7642",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ccb81db",
+   "id": "805bfc8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdffff93",
+   "id": "98dae219",
    "metadata": {},
    "source": [
     "Model training and Prediction for regression models"
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb1d8a22",
+   "id": "b381a048",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbbef183",
+   "id": "aabe1fab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f509142b",
+   "id": "263907dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6abd5636",
+   "id": "3d5765de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d7cf8c6",
+   "id": "5d34db7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e48dbda0",
+   "id": "ff3a2888",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ca843dc",
+   "id": "e0b4120d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4d0fd8b",
+   "id": "604b33ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,22 +593,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21ab77c1",
+   "id": "82a5361a",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c3a4472",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4251ccd",
+   "id": "755579d1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -616,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf83c9d6",
+   "id": "d8d7daf5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -624,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b48661a0",
+   "id": "bb57dbe4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -632,7 +624,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8c3dc5b",
+   "id": "676a8d42",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0143114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be111faf",
+   "id": "5349b887",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0b341bd",
+   "id": "d30a387c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "849d945a",
+   "id": "3b3a24f0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -666,29 +666,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4460f1a2",
+   "id": "15cabe4a",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "climate_analysis_colab.ipynb",
+   "provenance": []
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.x"
   }
  },
  "nbformat": 4,
